# Gendexgrasp_ros_ok

./: .gitignore  Grasp_Box_demo_curobo.md  README.md  demo.sh  demo_avoidance.sh  docker_user_how_to_start.md  gendexgrasp.yml  isaac_ros_kuavo避障轨迹生成运行手册.md  scense_demo_for_SG.md  start_docker_gendexgrasp.sh  test_foundation_grasp.rviz
dynamic_biped/launch/: auto_find_ar_tag.launch  sensor_robot_enable.launch
kuavo_assets/biped_s40/: CMakeLists.txt  package.xml  stl2obj.py
kuavo_assets/biped_s42/: package.xml  (+1 more)
ros_bag_end_curobo/: avoid_curobo_service.py  avoid_curobo_service_topic.py
scripts/: arm_specific_actions.py  demo_offline.py  demo_online.py
scripts_avoidance/: 0_temp_demo.py  arm_specific_actions.py  demo_offline_arm_target_pose_single.py  demo_offline_arm_target_sync_cycle.py  demo_offline_arm_target_sync_single.py  demo_offline_arm_target_sync_single_GraspBox.py  demo_offline_arm_target_sync_single_foundation.py  demo_offline_arm_target_sync_test.py  demo_offline_kuavo_arm_traj.py  kuavoRobotSDK.py  requirements.txt
src/ros_robot_kinematic/motion_capture_ik/: .gitlab-ci.yml  CMakeLists.txt  README.md
src/ros_robot_kinematic/motion_capture_ik/launch/: visualize.launch
src/ros_robot_kinematic/motion_capture_ik/models/biped_gen4.0/urdf/: biped_v3_arm.urdf
src/ros_robot_kinematic/motion_capture_ik/scripts/: ik_ros_uni.py
src/ros_robot_kinematic/motion_capture_ik/scripts/ik/: diff_ik.py  torso_ik.py
src/ros_robot_kinematic/motion_capture_ik/scripts/test/: sim_ik_cmd.py
src/ros_robot_kinematic/motion_capture_ik/scripts/tools/: quest3_utils.py
(+248 files in other folders)
